# Coral-CMake

./: .gitignore  CMakeLists.txt
Coral.Managed/: CMakeLists.txt
Coral.Native/: CMakeLists.txt
Coral.Native/Include/Coral/: Utility.hpp
